<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:padding="@dimen/side_margin"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".LeavesActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/layout_fromdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/side_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="start"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/fromdate"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        >

                        <TextView
                            android:id="@+id/txt_startdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="start"
                            android:text="@string/setdate"
                            android:textAlignment="viewStart"
                            android:textColor="@color/purple_700"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignRight="@+id/tv_beatytips_heading"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/edit_18" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_todate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/side_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="start"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/todate"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        >

                        <TextView
                            android:id="@+id/txt_finishdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="start"
                            android:text="@string/setdate"
                            android:textAlignment="viewStart"
                            android:textColor="@color/purple_700"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/edit_18" />
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/activity_horizontal_top_margin"
                        android:textColorHint="@android:color/white">

                        <EditText
                            android:id="@+id/etLeaveReason"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/side_margin"
                            android:digits="0123456789"
                            android:hint="@string/reason"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/purple_500"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>



                <ProgressBar
                    android:id="@+id/idLoadingPB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Submit"
                        android:background="@drawable/button_background"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/side_margin"
                        android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>