<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:tint="#57000000" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Login"
                        android:paddingBottom="40dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="15dp"
                            android:layout_marginTop="@dimen/activity_horizontal_top_margin"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/login_etUserName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/side_margin"
                                android:digits="0123456789"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:textColor="@android:color/black"
                                android:textColorHint="@android:color/white"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:textColorHint="@android:color/white"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/login_etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/side_margin"
                                android:hint="@string/String_password"
                                android:inputType="textPassword"
                                android:textColor="@android:color/black"
                                android:textColorHint="@android:color/white" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <ProgressBar
                            android:id="@+id/login_progressbar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:theme="@style/CircularProgress"
                            android:visibility="invisible" />
                    </RelativeLayout>


                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="37dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/side_margin"
                        android:background="@drawable/button_background"
                        android:elevation="7dp"
                        android:paddingLeft="36dp"
                        android:paddingTop="-86dp"
                        android:paddingRight="36dp"
                        android:paddingBottom="-16dp"
                        android:text="@string/btn_login"
                        android:textColor="@color/ButtonTextColor" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
