<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:padding="@dimen/side_margin"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".AddActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout_startwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/side_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_beatytips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="start"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/startofwork"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/txt_starttime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="start"
                        android:text="@string/settime"
                        android:textAlignment="viewStart"
                        android:textColor="@color/purple_700"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/tv_beatytips_heading"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/edit_18" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_finishwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/side_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="start"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/finishofwork"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/txt_finishtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="start"
                        android:text="@string/settime"
                        android:textAlignment="viewStart"
                        android:textColor="@color/purple_700"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/edit_18" />
                </LinearLayout>
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                   android:layout_weight="1"
                    android:layout_margin="@dimen/side_margin"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/side_margin"
                    android:textColor="@color/white" />
            </LinearLayout>
</LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>